docs/spec/grammar/conformance/accept/03-swap.myc
// exercises: the never-silent swap form (target + policy always lexical)
nodule signals;

fn widen(x: Binary{8}) => Ternary{6} =
    swap(x, to: Ternary{6}, policy: roundtrip);
